2009-12-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor fix in SL macro expansion.
	
	* tools/include/slc.m4: Strip whitespace to determine the break
	type.

2009-12-02  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the SL library with C's character type predicates.

	* lib/include/cctype.h,
	* lib/src/ctype.c: New.

	* lib/Makefile.am,
	* lib/mtalpha.mk: Update accordingly.

2009-12-02  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor optimization.

	* lib/src/io.c: Expose staticness of `digits' to the compiler.

2009-12-02  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor portability fix.
	
	* tools/bin/cce.in: Place `-lslc' last on the command line to cope
	with single-pass linkers.

2009-11-24  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor `slr' fix.
	
	* tools/bin/slr.in,	
	* tools/lib/r-mt-sim.sh.in: Talk about "graphic update delay"
	instead of "rate", to reflect the features available in the MG
	simulator.

2009-11-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend Fibre syntax recognized by `slr'.
	
	* tools/bin/sag: New syntax `vc(N)' for Fibre which expands to an
	array of complex numbers. (Used by FFT)

2009-11-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Tweak simulation architecture defaults.
	
	* tools/lib/r-mt-sim.sh.in: Change default place layout to better
	spread cores across memory rings when using COMA.

2009-11-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor fix in the reporting of performance counters.

	* lib/src/perf.c (mtperf_report_intervals): Place interval labels
	at the end of each row when printing CSV with headers, so that
	parsing with simpler tools need not understand double quotes and
	spaces inside strings.

2009-11-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor fix in the reporting of performance counters.

	* lib/src/perf.c: Do not pad the Fibre array if the pad flag is
	set to 0.

2009-11-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bug in `slr'.
	