@@ -1,3 +1,11 @@
+2009-12-07  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
+	Fix output primitives to support merging stderr and stdout.
+	
+	* tools/include/svp/testoutput.h: Flush output streams after
+	output operations. This allows for proper interleaving when stream
+	1 and 2 alias each other.
+
 2009-12-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
 	Minor fix in SL macro expansion.
